Fix 'user card' padding/alignment of modding posts

--- a/resources/assets/less/bem/beatmap-discussion-user-card.less
+++ b/resources/assets/less/bem/beatmap-discussion-user-card.less
@@ -39,6 +39,7 @@
     margin: 0 5px;
 
     @media @desktop {
+      min-width: 150px;
       flex: none;
     }
   }
